--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,20 @@
   "version": "1.0",
   "description": "Uses on-device AI to categorize and summarize bookmarks.",
   "permissions": [
-    "bookmarks",  
-    "storage",    
-    "favicon"     
+    "bookmarks",
+    "storage",
+    "favicon",
+    "tabs"
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
+  },
+  "icons": {
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   }
 }
